--- a/src/components/Applicant/AssignTags/UpdateTagsCard/UpdateTagsCard.css
+++ b/src/components/Applicant/AssignTags/UpdateTagsCard/UpdateTagsCard.css
@@ -26,7 +26,21 @@
   flex-wrap: wrap;
   align-items: center;
 
-  row-gap: 10px;
+  row-gap: 12px;
+}
+
+#delete-tag-x-button {
+  background-color: inherit;
+  padding: 0;
+  margin-left: 5px;
+  border-radius: 5px;
+}
+
+#delete-tag-x-icon {
+  width: 12px;
+  height: 12px;
+  
+  margin: 0px 0px -2px 0px;
 }
 
 #all-tags-list-item {
@@ -44,6 +58,8 @@
   display: flex;
   align-items: center;
   position: relative;
+
+  column-gap: 12px;
 }
 
 #edit-tag-button {
@@ -52,6 +68,17 @@
   border: 0;
   padding: 0;
   border-radius: 5px;
+}
+
+#add-tag-div-item {
+  display: flex;
+  width: 100%;
+
+  cursor: pointer;
+}
+
+#individual-tag-badge-tags-list {
+  padding: 0px 12px 0px 0px;
 }
 
 #update-tags-more-icon {  
